--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -185,7 +185,7 @@
     <string name="restaurant3_name">Great NY Noodletown</string>
     <string name="restaurant5_name">Fideos Sabrosos Tirados</string>
 
-    <string name="fast_food2_name">Wah Fung *1 Comida Rápida</string>
+    <string name="fast_food2_name">Wah Fung #1 Comida Rápida</string>
     <string name="fast_food3_name">Hua Ji Comida Rápida de Chuleta de Cerdo</string>
     <string name="fast_food5_name">Comida Rápida de May Wah</string>
 
