--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -186,4 +186,84 @@
     <string name="Activity6_shopping_address">395百老汇, 纽约, 纽约州10013</string>
     <string name="Activity5_shopping_address">238运河街道纽约 NY 10013</string>
     <string name="Activity7_shopping_address">83, 纽约, 纽约州10013</string>
+    <string name="Historical_sight1_address">133运河 St, 纽约, 纽约州10002</string>
+    <string name="Historical_sight2_address">215中心 St, 纽约, 纽约州10013</string>
+    <string name="Historical_sight3_address">5111运河 St, 纽约, 纽约州10002</string>
+    <string name="Historical_sight4_address">160 Centre St, New York, NY 10013</string>
+    <string name="Historical_sight6_address">18巴利, 纽约, 纽约州10013</string>
+    <string name="Historical_sight7_address">5派克 St, 纽约, 纽约州10002</string>
+    <string name="Historical_sight8_address">67桑 St, 纽约, 纽约州10013</string>
+    <string name="Historical_sight9_address">16B 果园街 (运河街) 纽约, 纽约州10002</string>
+    <string name="submit_feedback_button">" 提交反馈 "</string>
+    <string name="category1_name">" 餐馆 "</string>
+    <string name="category2_name">快餐</string>
+    <string name="category3_name">Sweets</string>
+    <string name="restaurant1_name">上海亚洲庄园</string>
+    <string name="restaurant1_website">没有</string>
+    <string name="restaurant1_description">提供一个超级基本的中国菜肴，包括汤饺子的大菜单没有多余的地方。</string>
+    <string name="restaurant2_name">Nom Wah茶室</string>
+    <string name="restaurant1_address">21 Mott St，纽约，NY 10013</string>
+    <string name="restaurant2_address">13 Doyers St, New York, NY 10013</string>
+    <string name="restaurant2_description">复古点心店的历史可追溯至1920年，提供包括茶，啤酒和葡萄酒的饮品。</string>
+    <string name="restaurant3_name">伟大的纽约州Noodletown</string>
+    <string name="restaurant3_address">28 Bowery，纽约，NY 10013</string>
+    <string name="restaurant3_website">" 没有 "</string>
+    <string name="restaurant3_description">在斯巴达的环境中供应盐烤海鲜，手工面条，汤和烤肉。</string>
+    <string name="restaurant4_name">平</string>
+    <string name="restaurant4_address">22 Mott St，纽约，NY 10013</string>
+    <string name="restaurant4_website">没有</string>
+    <string name="restaurant4_description">在这个广东海鲜地点，也就是以点心午餐而闻名的鱼在前面的鱼缸里被拿走。</string>
+    <string name="restaurant5_name">美味的拉面</string>
+    <string name="restaurant5_address">1 Doyers St，纽约，NY 10013</string>
+    <string name="restaurant5_website">没有</string>
+    <string name="restaurant5_description">中国面条是用手工制作的，在这个繁华的裸露地点供应汤和炸薯条。</string>
+    <string name="fast_food1_name">麦当劳</string>
+    <string name="fast_food1_address">纽约，纽约10013，纽约，Canal Street</string>
+    <string name="fast_food1_description">以汉堡，薯条和奶昔闻名的经典，长期的快餐连锁店。</string>
+    <string name="fast_food2_name">华丰</string>
+    <string name="fast_food2_address">79 Chrystie St, 纽约, 纽约州10002</string>
+    <string name="fast_food2_website">没有</string>
+    <string name="fast_food2_description">亚洲快餐店, 便宜的午餐特价食物, 可以方便地送到你家门口。</string>
+    <string name="fast_food3_name">华吉猪肉扒快餐</string>
+    <string name="fast_food3_address">7艾伦 St, 纽约10002</string>
+    <string name="fast_food3_description">小而适中的中国柜台服务点, 专门从事大米和快餐的猪肉排骨。</string>
+    <string name="fast_food4_name">Popeyes 路易斯安那厨房</string>
+    <string name="fast_food4_address">125运河 St, 纽约, 纽约州10002</string>
+    <string name="fast_food4_description">路易斯安那州的快餐连锁店以其辛辣的炸鸡、饼干和边而闻名。</string>
+    <string name="fast_food5_name">梅华快餐</string>
+    <string name="fast_food5_address">190海丝特 St, 纽约, 纽约州10013</string>
+    <string name="fast_food5_description">直接从他们的网站上可以华速食品专业的汤, \"过米\" 菜肴和面条汤。流行的 \"过米\" 菜肴包括鸡腿超过大米和猪肉印章超过大米。流行的面条汤包括牛肉面条汤和上海面条汤。</string>
+    <string name="sweets1_name">甜蜜的生活</string>
+    <string name="sweets1_address">63海丝特 St, 纽约, 纽约州10002</string>
+    <string name="sweets1_description">舒适的糖果店提供经典的甜款待加上坚果, 干果和房子制作的巧克力。</string>
+    <string name="sweets2_address">119巴克斯 St, 纽约, 纽约州10013</string>
+    <string name="sweets2_description">一家日本冰淇淋店, 供应一种鱼形的华夫饼锥中的创新风味。</string>
+    <string name="sweets3_name">甜蜜的时刻</string>
+    <string name="sweets3_address">106莫特 St, 纽约, 纽约州10013</string>
+    <string name="sweets3_description">时髦甜点咖啡馆与创造性的剃掉冰混合物和华夫饼, 加上工艺咖啡饮料和茶。</string>
+    <string name="sweets4_name">原唐人街冰淇淋厂</string>
+    <string name="sweets4_address">纽约新亚街65号, 纽约州10013</string>
+    <string name="sweets4_description">这种风味从熟悉到异国情调 (如荔枝) 在这个紧凑的冰淇淋店。</string>
+    <string name="sweets5_name">菲大面包店</string>
+    <string name="sweets5_address">83莫特 St, 纽约, 纽约州10013</string>
+    <string name="sweets5_description">中国面包店的蛋糕, 饼干和面包也提供冷热饮料。</string>
+    <string name="train_notice">在周末, 火车可能会因施工而受到改变。</string>
+    <string name="canal_street_station">运河街</string>
+    <string name="canal_street_description">到运河街地铁站有多种方式。这是一个非常大的车站, 由许多火车组成, 包括 N, Q, R, W, J, Z, M, 4 和6列车。</string>
+    <string name="east_broadway_station">东百老汇</string>
+    <string name="east_broadway_description">开往东百老汇的唯一列车是 F 列车。</string>
+    <string name="grand_street_station">大街</string>
+    <string name="grand_street_description">在这个星期结束 B 火车不跑。只有 D 列车停在这个车站。</string>
+    <string name="title_activity_transport_tabs">传输选项卡活动</string>
+    <string name="action_settings">设置</string>
+    <string name="section_format">节％1 $ d中的Hello World</string>
+    <string name="title_activity_transportation">" 运输活动 "</string>
+    <string name="title_activity_transport">运输活动</string>
+    <string name="tab_text_1">选项卡1</string>
+    <string name="tab_text_2">标签2</string>
+    <string name="tab_text_3">标签3</string>
+    <string name="title_activity_trains_transport">火车运输活动</string>
+    <string name="title_home">家</string>
+    <string name="title_dashboard">仪表板</string>
+    <string name="title_notifications">通知</string>
 </resources>
