--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -203,4 +203,114 @@
     <string name="Activity8_shopping_name">Canal Street</string>
     <string name="Activity8_shopping_address">Canal Street</string>
     <string name="hotel2_name">Hotel Mimosa</string>
+    <string name="hotel1_name">El Hotel Leon</string>
+    <string name="hotel1_address">125 Canal St, Nueva York, NY 10002</string>
+    <string name="hotel1_description_preview">Ubicado a los pies del puente de Manhattan en Chinatown, este hotel moderno con un ambiente de mediados de siglo moderno ...</string>
+    <string name="hotel2_description_preview">El Hotel Mimosa se encuentra en el barrio de East Side, en la ciudad de Nueva York, a solo 1,6 km de la ...</string>
+    <string name="hotel2_address">79 Division St, Nueva York, NY 10002</string>
+    <string name="hotel3_name">Wyndham Garden Chinatown</string>
+    <string name="hotel3_address">93 Bowery, Nueva York, NY 10002</string>
+    <string name="hotel3_description_preview">Relájese en habitaciones y suites bellamente diseñadas con muebles contemporáneos, balcones privados y ventanas del piso al techo con impresionantes vistas de la ciudad ...</string>
+    <string name="hotel4_name">Hotel Mulberry</string>
+    <string name="hotel4_address">52 Mulberry St, Nueva York, NY 10013</string>
+    <string name="hotel4_description_preview">Con vistas al Parque Columbus, este moderno hotel de Chinatown es 0,3 millas de Little Italy y a 5 minutos a pie de la estación de metro más cercana...</string>
+    <string name="hotel5_name">Hotel 50 Bowery NYC</string>
+    <string name="hotel5_address">50 bowery, Nueva York, NY 10013</string>
+    <string name="hotel5_description_preview">Hotel que Bowery 50 está situado en el barrio de Chinatown en Nueva York, a sólo 0,9 millas de la zona cero...</string>
+    <string name="hotel6_name">Best Western Bowery Hanbee Hotel</string>
+    <string name="hotel6_address">231 grand St, Nueva York, NY 10013</string>
+    <string name="hotel6_description_preview">Este hotel está en el centro de Manhattan, a pasos de Little Italy y a 400 pies de distancia de la estación de metro de la calle gran...</string>
+    <string name="hotel7_name">Hotel 91</string>
+    <string name="hotel7_address">91 E Broadway, Nueva York, NY 10002</string>
+    <string name="hotel8_name">Este hotel está en el centro de Manhattan, a pasos de Little Italy y a 400 pies de distancia de la estación de metro de la calle gran...</string>
+    <string name="hotel7_description_preview">En Lower East Side de Manhattan, 91 Hotel está a 5 minutos a pie de Chinatown y la estación de metro de East Broadway...</string>
+    <string name="hotel8_address">276 canal St, Nueva York, NY 10013</string>
+    <string name="hotel8_description_preview">Ubicado en el barrio de Bowery en Nueva York, una milla del Hotel Pacific One World Trade Center, Estados Unidos dispone de...</string>
+    <string name="hotel9_name">Tribeca blu</string>
+    <string name="hotel9_address">blu hotel, Nueva York, NY 10013</string>
+    <string name="hotel9_description_preview">Tribeca Blu se encuentra en una intersección ocupada de centro de Canal Street y Broadway. La ubicación de permitirse una sensación urbana con...</string>
+    <string name="hotel10_name">Sun Bright Hotel</string>
+    <string name="hotel10_address">140 Hester St, Nueva York, NY 10013</string>
+    <string name="hotel10_description_preview">El Sun Bright hotel está en el centro de Chinatown y a una cuadra de la estación de metro Grand. El hotel ofrece</string>
+    <string name="hotel11_name">Fairfield Inn &amp; Suites by Marriott New York Manhattan/Downtown</string>
+    <string name="hotel11_address">95 Henry St, Nueva York, NY 10002</string>
+    <string name="hotel11_description_preview">Con nuevo, amplias habitaciones y suites, así como una ubicación conveniente cerca de la bolsa de valores de Nueva York, septiembre 11 Memorial...</string>
+    <string name="hotel12_name">Hotel Richland Nueva York</string>
+    <string name="hotel12_address">5 Allen St, Nueva York, NY 10002</string>
+    <string name="hotel12_description_preview">Sueño fácil en una cómoda habitación. Usted puede quedarse con Wi-Fi gratuita, reproductor de DVD, soporte para iPod y un...</string>
+    <string name="hotel13_name">New World Hotel</string>
+    <string name="hotel13_address">101 Bowery #2, Nueva York, NY 10002</string>
+    <string name="hotel13_description_preview">Ya sea que viaje por negocios o por placer, New World Hotel ofrece una variedad de tipos de habitaciones para garantizar el confort a sus necesidades a precios bajos ...</string>
+    <string name="hotel14_name">Canal Loft Hotel</string>
+    <string name="hotel14_address">94 Canal St, Nueva York, NY 10002</string>
+    <string name="hotel14_description_preview">El Canal Loft Hotel se encuentra en Nueva York, en la región del estado de Nueva York, a 11 minutos a pie de Bloomingdales, y ofrece salón compartido.</string>
+    <string name="hotel15_name">Windsor Hotel</string>
+    <string name="hotel15_address">108 Forsyth St, Nueva York, NY 10002</string>
+    <string name="hotel15_description_preview">Los hoteles Windsor ofrecen habitaciones asequibles y espaciosas, cada una adorada con modernas comodidades y decoración. Little Italy está convenientemente ubicado ...</string>
+    <string name="hotel16_name">Manhattan Bowery Lodge</string>
+    <string name="hotel16_address">81 Bowery, Nueva York, NY 10002</string>
+    <string name="hotel16_description_preview">El Manhattan Bowery Lodge está situado en Nueva York, a 400 metros de Little Italy y a 1,3 km del puente de Brooklyn ...</string>
+    <string name="hotel17_name">Bowery Grand Hotel</string>
+    <string name="hotel17_address">143 Bowery, Nueva York, NY 10002</string>
+    <string name="hotel17_description_preview">Bowery Grand Hotel le ofrece habitaciones limpias y básicas, y usted decide dónde gastar el resto del dinero que ahorró en un hotel de lujo ...</string>
+    <string name="hotel18_name">Comfort Inn Lower East Side</string>
+    <string name="hotel18_address">154 Madison St, Nueva York, NY 10002</string>
+    <string name="hotel18_description_preview">El Comfort Inn Lower East Side está perfectamente ubicado en el corazón de Manhattan y es uno de los hoteles de nueva construcción en el área ...</string>
+    <string name="activity1_address">215 Centre Street</string>
+    <string name="activity3_address">37 Mott Street</string>
+    <string name="activity2_address">133 Canal Street</string>
+    <string name="activity4_name">Canal Street</string>
+    <string name="activity5_address">9 Doyers Street</string>
+    <string name="activity6_address">66 Mulberry Street</string>
+    <string name="activity7_address">62 Mott Street</string>
+    <string name="activity8_address">238 Canal Street</string>
+    <string name="activity9_address">4 Cortlandt Alley</string>
+    <string name="activity10_address">59 Canal Street</string>
+    <string name="activity11_address">48 Mott Street</string>
+    <string name="activity13_address">29 Mott Street</string>
+    <string name="Activity1_shopping_address">78 Mulberry St, Nueva York, NY 10013</string>
+    <string name="Activity2_shopping_address">59 Franklin St, Nueva York, NY 10013</string>
+    <string name="Activity3_shopping_address">50 Mulberry St, Nueva York, NY 10013</string>
+    <string name="Activity4_shopping_address">50 Mott St, Nueva York, NY 10013</string>
+    <string name="Activity5_shopping_address">238 Canal Street Nueva York NY 10013</string>
+    <string name="Activity6_shopping_address">395 Broadway, Nueva York, NY 10013</string>
+    <string name="Activity7_shopping_address">83 Bayard St, Nueva York, NY 10013</string>
+    <string name="Historical_sight1_address">133 Canal St, Nueva York, NY 10002</string>
+    <string name="Historical_sight2_address">215 Centre St, Nueva York, NY 10013</string>
+    <string name="Historical_sight3_address">5111 Canal St, Nueva York, NY 10002</string>
+    <string name="Historical_sight4_address">160 Centre St, Nueva York, NY 10013</string>
+    <string name="Historical_sight5_address">9 Orchard St, Nueva York, NY 10002</string>
+    <string name="Historical_sight6_address">18 Bowery, Nueva York, NY 10013</string>
+    <string name="Historical_sight7_address">5 Pike St, Nueva York, NY 10002</string>
+    <string name="Historical_sight8_address">67 Mulberry St, Nueva York, NY 10013</string>
+    <string name="Historical_sight9_address">16B Orchard Street (Canal Street) Nueva York, NY 10002</string>
+    <string name="restaurant1_address">21 Mott St, NeYork, NY 10013</string>
+    <string name="restaurant2_address">13 Doyers St, Nueva York, NY 10013</string>
+    <string name="restaurant3_address">28 Bowery, Nueva York, NY 10013</string>
+    <string name="restaurant4_address">22 Mott St, Nueva York, NY 10013</string>
+    <string name="restaurant5_address">1 Doyers St, Nueva York, NY 10013</string>
+    <string name="fast_food1_address">262 Canal St, Nueva York, NY 10013</string>
+    <string name="fast_food2_address">79 Chrystie St, Nueva York, NY 10002</string>
+    <string name="fast_food3_address">7 Allen St, Nueva York 10002</string>
+    <string name="fast_food4_address">125 Canal St, Nueva York, NY 10002</string>
+    <string name="fast_food5_address">190 Hester St, Nueva York, NY 10013</string>
+    <string name="sweets1_address">63 Hester St, Nueva York, NY 10002</string>
+    <string name="sweets2_address">119 Baxter St, Nueva York, NY 10013</string>
+    <string name="sweets3_address">106 Mott St, Nueva York, NY 10013</string>
+    <string name="sweets4_address">65 Bayard Street, Nueva York, NY 10013</string>
+    <string name="sweets5_address">83 Mott St, Nueva York, NY 10013</string>
+    <string name="canal_street_station">Canal Street</string>
+    <string name="grand_street_station">Grand Street</string>
+    <string name="title_activity_transport_tabs">Actividad de pestañas de transporte</string>
+    <string name="action_settings">Configuraciones</string>
+    <string name="section_format">Hello World de la sección% 1 $ d</string>
+    <string name="title_activity_transportation">Actividad de transporte</string>
+    <string name="title_activity_transport">Actividad de transporte</string>
+    <string name="tab_text_1">Pestaña 1</string>
+    <string name="tab_text_2">Pestaña 2</string>
+    <string name="tab_text_3">Pestaña 3</string>
+    <string name="title_activity_trains_transport">Actividad de transporte en trenes</string>
+    <string name="title_home">Casa</string>
+    <string name="title_dashboard">Tablero</string>
+    <string name="title_notifications">Notificaciones</string>
 </resources>
